tests/bad/external-return-enum.pas
program external_return_enum;

type
    Color = (Red, Green);

function bad_return: Color; external;

begin
end.
